avoid scroll y on mobile

--- a/src/assets/styles/_bases.scss
+++ b/src/assets/styles/_bases.scss
@@ -1,3 +1,5 @@
+@use "assets/styles/mixins" as mixin;
+
 * {
   margin: 0;
   padding: 0;
@@ -7,13 +9,7 @@
 }
 
 body {
-  // min-height: 100vh;
-  // min-height: fill-available;
-  // min-height: -webkit-fill-available;
   background-color: var(--light-grey);
   font-size: 62.5%;
-}
-html {
-  height: fill-available;
-  height: -webkit-fill-available;
+  overflow-y: hidden;
 }
