--- a/src/assets/styles/_themes.scss
+++ b/src/assets/styles/_themes.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
   font-size: 1.4rem;
   border-radius: var(--border-radius);
-  padding: 4px 12px;
+  padding: 8px 12px;
   background-color: var(--peps);
   border: 6px solid var(--peps);
   color: var(--dark-peps);
