--- a/src/pages/components/LoadingGame/LoadingGame.module.scss
+++ b/src/pages/components/LoadingGame/LoadingGame.module.scss
@@ -1,24 +1,31 @@
 @use "assets/styles/mixins" as mixin;
 
 .loadingGame {
-  margin: 20px;
   background-color: var(--dark-grey);
   border-radius: var(--border-radius);
   max-width: 450px;
   @include mixin.xs {
     max-width: 300px;
-    flex: 0 0 auto;
+    flex: none;
+    overflow-y: hidden;
   }
-  img {
-    margin: 30px 0;
+  .heartContainer {
     max-width: 250px;
     max-height: 250px;
-    animation-name: logo;
-    animation-iteration-count: infinite;
-    animation-duration: 5s;
     @include mixin.xs {
       max-width: 150px;
       max-height: 150px;
+    }
+    img {
+      max-width: 250px;
+      max-height: 250px;
+      animation-name: logo;
+      animation-iteration-count: infinite;
+      animation-duration: 5s;
+      @include mixin.xs {
+        max-width: 150px;
+        max-height: 150px;
+      }
     }
   }
 }
