--- a/src/pages/components/Timeout/Timeout.module.scss
+++ b/src/pages/components/Timeout/Timeout.module.scss
@@ -1,3 +1,5 @@
+@use "assets/styles/mixins" as mixin;
+
 .timeoutContainer {
   position: fixed;
   top: 0px;
@@ -6,6 +8,7 @@
   width: 100%;
   height: 100vh;
   background-color: rgba(18, 18, 18, 0.9);
+  overflow-y: hidden;
 }
 
 .timeoutContent {
